--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkGroup.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkGroup.formly.html
@@ -1,5 +1,12 @@
 <div class="form-inline">
-  <h3 dynamic-label key="{{to.label}}.RBK"><span wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span></h3>
+  <div>
+    <label class="inline-block" ng-class="{'bold' : to.bold}">
+      <span dynamic-label key="{{to.label}}.RBK"></span>
+      {{to.required ? '*' : ''}}
+      <span wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span>
+    </label>
+  </div>
+
   <div data-ng-repeat="choice in to.choices">
     <label class="checkbox" ng-class="{disabled:to.disabled[choice]}">
       <input id="{{options.key}}-{{choice}}" type="checkbox" class="big-checkbox" ng-model="model[options.key][choice]" ng-disabled="to.disabled[choice]">
