--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/radioGroup.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/radioGroup.formly.html
@@ -1,9 +1,15 @@
 <div class="form-inline">
-  <h3 dynamic-label key="{{to.label}}.RBK"><span wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span></h3>
+  <div>
+    <label class="inline-block" ng-class="{'bold' : to.bold}">
+      <span dynamic-label key="{{to.label}}.RBK"></span>
+      {{to.required ? '*' : ''}}
+      <span wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span>
+    </label>
+  </div>
 
   <div data-ng-repeat="choice in to.choices">
     <label class="radio">
-      <input id="{{options.key}}-{{choice}}" type="radio" name="{{options.key}}" class="big-radio" ng-model="model[options.key]" ng-value="{{choice}}">
+      <input id="{{options.key}}-{{choice}}" type="radio" name="{{options.key}}" class="big-radio" ng-model="model[options.key]" value="{{choice}}">
       <span dynamic-label key="{{to.code}}.{{choice}}.RBK"></span>
     </label>
     <span wc-help-mark field-dynamic-help-text="{{to.code}}.{{choice}}.HLP"></span>
