INTYG-3164: FMB-rutor är inte längre del av print.css.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/wcFmbHelpDisplay.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/wcFmbHelpDisplay.directive.html
@@ -1,4 +1,4 @@
-<div class="panel-wrapper-fmb">
+<div class="panel-wrapper-fmb print-hide">
   <div class="panel panel-fmb-info" ng-class="{'fmb-collapse' : !status.open}">
     <div class="panel-heading panel-fmb-info-heading" ng-click="status.open = !status.open">
       <div class="pull-left">
