--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/diagnos.formly.typeahead_template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/diagnos.formly.typeahead_template.html
@@ -1,2 +1,6 @@
 <span style="font-style:italic" ng-if="match.model.moreResults" message key="common.label.diagnoses.more_results"></span>
-<a tabindex="-1" ng-bind-html="match.label | uibTypeaheadHighlight:query" ></a>
+<a ng-if="!match.model.shortPsykiskDiagnos" tabindex="-1" ng-bind-html="match.label | uibTypeaheadHighlight:query" ></a>
+<span class="disabled"
+      ng-if="match.model.shortPsykiskDiagnos"
+      ng-bind-html="match.label | uibTypeaheadHighlight:query"
+      title="Diagnoskod måste anges på fyrställig nivå"></span>
