--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcIntygLabel.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcIntygLabel.directive.html
@@ -3,6 +3,6 @@
     <span dynamic-label key="{{h4Label}}"></span>
   </h4>
   <h5 ng-if="h5Label">
-    <span dynamic-label key="{{h5Label}}"></span>
+    <span dynamic-label key="{{h5Label}}" ng-class="{noH4Before : noH4Before}"></span>
   </h5>
 </div>
