--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/wcFmbHelpDisplay.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/wcFmbHelpDisplay.directive.html
@@ -1,35 +1,39 @@
-<div class="panel-wrapper-fmb print-hide">
-  <div class="panel panel-fmb-info" ng-class="{'fmb-collapse' : !status.open}">
-    <div class="panel-heading panel-fmb-info-heading" ng-click="status.open = !status.open">
-      <div class="pull-left">
-          <img class="media-object fmb-accordion-head-img" ng-src="/img/socialstyrelsen_logo.png"/>
-      </div>
-      <div class="fmb-panel-title">
-          <h4><span id="fmb_static_heading_{{relatedFormId}}">Information från Socialstyrelsens försäkringsmedicinska beslutsstöd</span></h4>
+<div class="print-hide">
+  <div class="panel-wrapper-fmb">
+    <button type="button"
+            class="btn btn-default btn-fmb"
+            ng-click="status.open = !status.open">FMB <i class="glyphicon fmb-glyphicon"
+                                                         ng-class="{'glyphicon-minus-sign': status.open, 'glyphicon-plus-sign': !status.open}"></i></button>
+    <div class="panel panel-fmb-info" ng-show="status.open" ng-class="{'fmb-collapse': !status.open}">
+      <div class="panel-heading panel-fmb-info-heading">
+        <div class="fmb-panel-title">
           <h4><span id="fmb_diagnos_heading_{{relatedFormId}}">{{diagnosisCode}} - {{diagnosisDescription}}</span></h4>
+        </div>
+        <div class="alert alert-warning" ng-if="diagnosisCode !== originalDiagnosisCode">
+          <span id="fmb_diagnos_not_in_fmb_alert">För {{originalDiagnosisCode}} finns inget FMB-stöd. Det FMB-stöd som visas nedan gäller den mindre specifika koden {{diagnosisCode}} - {{diagnosisDescription}}.</span>
+        </div>
+        <div>
+          <button type="button"
+                  class="btn btn-default fmb-collapse-icon"
+                  ng-click="status.open = !status.open"><i class="glyphicon fmb-glyphicon"
+                                                               ng-class="{'glyphicon-minus-sign': status.open, 'glyphicon-plus-sign': !status.open}"></i></button>
+        </div>
       </div>
-      <div class="alert alert-warning" ng-if="diagnosisCode !== originalDiagnosisCode">
-        <span id="fmb_diagnos_not_in_fmb_alert">För {{originalDiagnosisCode}} finns inget FMB-stöd. Det FMB-stöd som visas nedan gäller den mindre specifika koden {{diagnosisCode}} - {{diagnosisDescription}}.</span>
-      </div>
-      <div class="fmb-collapse-icon">
-          <span>
-              <i class="glyphicon fmb-glyphicon" ng-class="{'glyphicon-minus-sign': status.open, 'glyphicon-plus-sign': !status.open}"></i>
-          </span>
-      </div>
-    </div>
-    <div class="panel-body">
-
-      <div ng-repeat="item in helpTextContents" ng-show="item.text || item.list">
+      <div class="panel-body">
+        <div ng-repeat="item in helpTextContents" ng-show="item.text || item.list">
           <h4 class="fmb-sub-headline" id="fmb_heading_{{item.heading}}">
-              <span message key="{{'fmb.' + item.heading}}"></span>
+            <span message key="{{'fmb.' + item.heading}}"></span>
           </h4>
-
           <section class="fmb-section" id="fmb_text_{{item.heading}}" ng-if="item.text">{{item.text}}</section>
           <section class="fmb-section" id="fmb_text_{{item.heading}}" ng-if="item.list">
-              <ul class="fmb-bullet-list" ng-repeat="bullet in item.list track by $index">
-                  <li id="fmb_bullet_{{item.heading}}_{{$index}}">{{bullet}}</li>
-              </ul>
+            <ul class="fmb-bullet-list" ng-repeat="bullet in item.list track by $index">
+              <li id="fmb_bullet_{{item.heading}}_{{$index}}">{{bullet}}</li>
+            </ul>
           </section>
+        </div>
+      </div>
+      <div class="panel-footer panel-footer--fmb">
+          <img ng-src="/web/img/socialstyrelsen_icon16.png"/> <span class="fmb-icon-text" id="fmb_static_heading_{{relatedFormId}}">Information från Socialstyrelsens försäkringsmedicinska beslutsstöd</span>
       </div>
     </div>
   </div>
