--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcIntygRelationsList.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcIntygRelationsList.directive.html
@@ -1,6 +1,4 @@
-<a ng-click="showrelated = !showrelated" id="toggleShowRelatedIntyg" ng-show="viewState.relations.length > 1"><span ng-show="!showrelated" message key="common.intyg.relation.showrelated" title="Visar relaterade intyg utfärdade på denna enhet."></span><span ng-show="showrelated" message key="common.intyg.relation.hiderelated"></span>
-</a>
-<div uib-collapse="!showrelated" id="intygRelations">
+<div id="intygRelations">
   <table class="table table-striped table-qa">
     <tr>
       <th></th>
@@ -10,10 +8,8 @@
     </tr>
     <tr ng-repeat="relation in viewState.relations">
       <td>
-        <span class="currentlyviewing" ng-if="viewState.intygModel.id == relation.intygsId" message
-              key="common.intyg.relation.currentlyviewing"></span>
-        <button ng-if="viewState.intygModel.id != relation.intygsId" type="button" class="btn btn-info"
-                ng-click="gotoRelatedIntyg(relation)">
+        <span class="currentlyviewing" ng-if="viewState.intygModel.id == relation.intygsId" message key="common.intyg.relation.currentlyviewing"></span>
+        <button ng-if="viewState.intygModel.id != relation.intygsId" type="button" class="btn btn-info" ng-click="gotoRelatedIntyg(relation)">
           <span message key="common.intyg.relation.show"></span>
         </button>
       </td>
