--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -33,7 +33,6 @@
              person-id="viewState.intygModel.grundData.patient.personId">
 
         </div>
-        <span wc-intyg-relations></span>
       </div>
       <div class="form-group buttonbar">
         <div class="btn-row">
@@ -126,6 +125,9 @@
                   popover-placement="auto top">
             Förnya
           </button>
+
+          <wc-intyg-relations-button view-state="viewState" btn-class="btn btn-info"></wc-intyg-relations-button>
+
           <button type="button"
                   wc-authority="MAKULERA_INTYG"
                   request-origin="!UTHOPP"
