INTYG-3030: Fadeanimering istället för width-collapse

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/wcFmbHelpDisplay.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/wcFmbHelpDisplay.directive.html
@@ -2,9 +2,9 @@
   <button type="button" class="btn btn-default btn-fmb" ng-click="status.open = !status.open">FMB <i
       class="glyphicon fmb-glyphicon"
       ng-class="{'glyphicon-minus-sign': status.open, 'glyphicon-plus-sign': !status.open}"></i></button>
-  <div class="panel-wrapper-fmb">
-    <div class="panel-arrow" ng-class="{'fmb-collapse': !status.open}"></div>
-    <div class="panel panel-fmb-info" ng-show="status.open" ng-class="{'fmb-collapse': !status.open}">
+  <div class="panel-wrapper-fmb" ng-show="status.open" ng-class="{'fmb-collapse': !status.open}">
+    <div class="panel-arrow"></div>
+    <div class="panel panel-fmb-info">
       <div class="panel-heading panel-fmb-info-heading">
         <div class="fmb-panel-title">
           <h4><span id="fmb_diagnos_heading_{{relatedFormId}}">{{diagnosisCode}} - {{diagnosisDescription}}</span>
