--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/prognos.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/prognos.formly.html
@@ -8,7 +8,8 @@
   </div>
 
   <wc-validation-group field-type="radio-group"
-                       validations="formState.viewState.common.validationMessagesByField[options.key]">
+                       validations="formState.viewState.common.validationMessagesByField[options.key]"
+                       kompletteringar="hasKompletteringar()">
     <div class="form-group form-inline row" data-ng-repeat="choice in to.choices">
 
       <div ng-class="choice.showDropDown ? 'col-md-8' : 'col-md-12'">
@@ -34,6 +35,9 @@
       </div>
 
     </div>
+
+    <wc-field-komplettering key="{{options.key}}" komplettering-key="{{to.kompletteringKey}}"></wc-field-komplettering>
+
   </wc-validation-group>
 
 </div>
