--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/validationWrapper.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/validationWrapper.formly.html
@@ -1,5 +1,8 @@
 <wc-validation-wrapper field-type="{{options.type}}"
                        label-col-size="{{to.labelColSize}}"
+                       key="{{options.key}}"
+                       komplettering-key="{{to.kompletteringKey}}"
+                       hide-komplettering-text="{{to.hideKompletteringText}}"
                        validations="formState.viewState.common.validationMessagesByField[options.key.toLowerCase()]">
   <formly-transclude></formly-transclude>
 </wc-validation-wrapper>
