--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcValidationGroup.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcValidationGroup.directive.html
@@ -1,4 +1,4 @@
-<div ng-class="{'grouperror' : validations}">
+<div ng-class="{'grouperror' : validations, 'groupkomplettering' : kompletteringar}">
   <ng-transclude></ng-transclude>
   <wc-field-validation field-type="{{fieldType}}" validations="validations"></wc-field-validation>
 </div>
