--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/fk/wcViewIntygFields.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/fk/wcViewIntygFields.directive.html
@@ -1,11 +1,10 @@
 <div>
 
-  <div wc-field field-dynamic-label="KAT_{{group.templateOptions.category}}.RBK" ng-repeat="group in intygFields">
-
+  <div wc-field category-number="{{group.templateOptions.category}}" field-dynamic-label="KAT_{{group.templateOptions.category}}.RBK" ng-repeat="group in intygFields">
     <div ng-repeat="field in group.fieldGroup">
-      <div wc-view-intyg-field field="field" next-field="group.fieldGroup[$index+1]" intyg-model="intygModel"></div>
+      <div wc-view-intyg-field category-number="group.templateOptions.category" field="field" next-field="group.fieldGroup[$index+1]" intyg-model="intygModel"></div>
       <div ng-repeat="subField in field.fieldGroup">
-        <div wc-view-intyg-field field="subField" next-field="field.fieldGroup[$index+1]" intyg-model="intygModel"></div>
+        <div wc-view-intyg-field category-number="group.templateOptions.category" field="subField" next-field="field.fieldGroup[$index+1]" intyg-model="intygModel"></div>
       </div>
     </div>
 
