INTYG-3082: Uppdatera listan för kompletteringar i dialogen för svara med nytt intyg när man ändrar hanterad status på ett ärende.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/komplettera/komplettering-modal-dialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/komplettera/komplettering-modal-dialog.html
@@ -9,7 +9,7 @@
     <div ng-repeat="kompArende in model.arendeSvar.kompletteringsArenden" class="form-group">
       <div id="arende-fragetext-{{kompArende.fragaInternReferens}}">{{kompArende.fragaMeddelande}}</div>
       <div
-          id="fkKompletteringar-{{kompArende.fragaInternReferens}}"
+          id="fkKompletteringar-{{kompArende.fragaInternReferens}}-{{$index}}"
           ng-repeat="komplettering in kompArende.kompletteringar" class="padding-top-small">
 
         <div class="komplettera-row" ng-if="model.arendeSvar.intygProperties.type == 'fk7263'">
