INTYG-3219: Ändra informationstext för FMB-information

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/wcFmbHelpDisplay.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/wcFmbHelpDisplay.directive.html
@@ -7,14 +7,16 @@
       <div class="fmb-panel-title">
           <h4><span id="fmb_static_heading_{{relatedFormId}}">Information från Socialstyrelsens försäkringsmedicinska beslutsstöd</span></h4>
           <h4><span id="fmb_diagnos_heading_{{relatedFormId}}">{{diagnosisCode}} - {{diagnosisDescription}}</span></h4>
-      </div>
-      <div class="alert alert-warning" ng-if="diagnosisCode !== originalDiagnosisCode">
-        <span id="fmb_diagnos_not_in_fmb_alert">För {{originalDiagnosisCode}} finns inget FMB-stöd. Det FMB-stöd som visas nedan gäller den mindre specifika koden {{diagnosisCode}} - {{diagnosisDescription}}.</span>
-      </div>
-      <div class="fmb-collapse-icon">
-          <span>
-              <i class="glyphicon fmb-glyphicon" ng-class="{'glyphicon-minus-sign': status.open, 'glyphicon-plus-sign': !status.open}"></i>
-          </span>
+        </div>
+        <div class="alert alert-warning" ng-if="diagnosisCode !== originalDiagnosisCode">
+          <span id="fmb_diagnos_not_in_fmb_alert">Det FMB-stöd som visas är för koden {{diagnosisCode}} - {{diagnosisDescription}}.</span>
+        </div>
+        <div>
+          <button type="button"
+                  class="btn btn-default fmb-collapse-icon"
+                  ng-click="status.open = !status.open"><i class="glyphicon fmb-glyphicon"
+                                                               ng-class="{'glyphicon-minus-sign': status.open, 'glyphicon-plus-sign': !status.open}"></i></button>
+        </div>
       </div>
     </div>
     <div class="panel-body">
